# libminigame

./: .appveyor.yml  .gitignore  CMakeLists.txt  main.cpp
include/minigame/: minigame.h
src/: minigame.cpp
src/asset/: asset.hpp  asset_file.hpp  asset_loader.hpp  asset_tga.hpp  asset_vorbis.hpp  decoder.hpp  decoder_tga.hpp  decoder_vorbis.hpp  stb_image.hpp  stb_vorbis.c  stb_vorbis.hpp
src/audio/: audio_player.hpp
src/gfx/: gfx_draw.hpp  gfx_shader.hpp  gfx_texture.hpp
src/thread/: thread_queue.hpp
src/window/: window.hpp
test/: c_api.cpp  main.cpp
test/asset/: test_asset_loader.hpp
test/audio/: test_audio_player.hpp
test/gfx/: test_gfx_draw.hpp  test_gfx_shader.hpp  test_gfx_texture.hpp
test/thread/: test_thread_queue.hpp
test/window/: test_window.hpp
